<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="@integer/material_motion_duration_short_1"
            app:srcCompat="@drawable/shrek"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/id_take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/text_take_photo"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/id_select_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/text_select_image"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/id_title_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_title_film"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/id_name_director"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:hint="@string/text_name_director"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/id_anyo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/text_anyo"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp" />

    <EditText
        android:id="@+id/id_url_imdb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_url_imdb"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp" />

    <Spinner android:id="@+id/id_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_marginHorizontal="10dp"
        android:prompt="@string/text_select_genre"
        android:entries="@array/spinner_genre"/>

    <Spinner android:id="@+id/id_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:prompt="@string/text_select_format"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="10dp"
        android:entries="@array/spinner_format"/>

    <EditText
        android:id="@+id/id_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_comments"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_marginHorizontal="10dp" />

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/id_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_cancel"
            android:layout_marginHorizontal="10dp" />

        <Button
            android:id="@+id/id_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_save"
            android:layout_marginHorizontal="10dp" />
    </LinearLayout>
</LinearLayout>
</ScrollView>